--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Ofcom, the UK's communications regulator, has reserved some numbers for use in T
 They are also very useful for presentations and documentation, where you want to use something which looks like a valid phone number, without actually giving out someone's actual phone number.
 
 Ofcom just publishes the details of the ranges available; this tool lets you generate as many numbers as you want with just a couple of clicks.
+
+There's a demo / hosted version here: https://neilzone.co.uk/number/
